--- a/css/style.css
+++ b/css/style.css
@@ -9,4 +9,11 @@
     width: 100%;
     height: 100vh;
     background: #6db2c5;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.calculator{
+    background: #3a4452;
 }
